<resources>
    <string name="app_name">InverseSport</string>
    <string name="map">Карта</string>
    <string name="afisha">Афиша</string>
    <string name="profile">Профиль</string>
    <string name="sign_up">Регистрация</string>
    <string name="login">Войти</string>
    <string name="login_up">Вход</string>
    <string name="login_text">Входя в систему, вы принимаете</string>
    <string name="login_text_2">пользовательское соглашение</string>
    <string name="email">Почта</string>
    <string name="password">Пароль</string>
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="age">Возраст</string>
    <string name="to_sign_up">Зарегистрироваться</string>
    <string name="to_event">К мероприятиям</string>
    <string name="exit">Выйти</string>
    <string name="error_login">Неправильная почта или пароль</string>
    <string name="error_email">Введите корректную почту</string>
    <string name="error_email_2">Пользователь с такой почтой уже существует</string>
    <string name="error_password">Пароль должен быть больше 8 символов</string>
    <string name="error_age">Введите корректный возраст</string>
    <string name="empty_profile">Возникли проблемы, проверьте подключение к интернету</string>
    <string name="empty_afisha">Нет мероприятий на этот день</string>
    <string name="date">Дата</string>
    <string name="event">Мероприятие</string>
    <string name="about_event">О мероприятии</string>
    <string name="finish_event_title">Вы успешно зарегестрированны!</string>
    <string name="finish_event_description">Мероприятие скоро появится во вкладке “Профиль”</string>
</resources>