<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/login_entry_bottom"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical"
        android:layout_marginHorizontal="32dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:src="@drawable/image_inverse_sport_title"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/edit_text_background"
            android:fontFamily="@font/mont_semibold"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:letterSpacing="0.02"
            android:maxLines="1"
            android:paddingHorizontal="18dp"
            android:paddingVertical="8dp"
            android:textColor="@color/edit_text"
            android:textColorHint="@color/text_description"
            android:textSize="16sp"
            android:layout_marginTop="16dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/edit_text_background"
            android:fontFamily="@font/mont_semibold"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:letterSpacing="0.02"
            android:maxLines="1"
            android:paddingHorizontal="18dp"
            android:paddingVertical="8dp"
            android:textColor="@color/edit_text"
            android:textColorHint="@color/text_description"
            android:textSize="16sp" />

        <Button
            android:id="@+id/button_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:layout_marginTop="8dp"
            app:cornerRadius="15dp"
            android:paddingVertical="16dp"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:fontFamily="@font/mont_semibold"
            android:text="@string/login"
            android:backgroundTint="@color/text_main" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/image_gosuslugi"
            android:adjustViewBounds="true"
            android:layout_marginHorizontal="66dp"
            android:layout_marginTop="48dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/login_entry_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="60dp"
        android:layout_marginHorizontal="32dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_finish_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            app:cornerRadius="15dp"
            android:paddingVertical="16dp"
            android:textColor="@color/text_main"
            android:textSize="16sp"
            android:fontFamily="@font/mont_semibold"
            android:text="@string/sign_up"
            app:strokeWidth="2dp"
            app:strokeColor="@color/text_main"
            android:backgroundTint="@color/white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_marginTop="25dp"
            android:textColor="@color/text_description"
            android:text="@string/login_text"
            android:fontFamily="@font/mont_semibold"
            android:gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/text_main"
            android:text="@string/login_text_2"
            android:fontFamily="@font/mont_semibold"
            android:gravity="center"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>